--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "corepack enable && corepack prepare pnpm@8.15.4 --activate && pnpm install --frozen-lockfile",
+  "installCommand": "npx --yes pnpm@8.15.4 install --frozen-lockfile",
   "buildCommand": "pnpm --filter @chroma/front-store build",
   "outputDirectory": "packages/front-store/dist"
 }
