chore: github actions

--- a/packages/mobile-store/eas.json
+++ b/packages/mobile-store/eas.json
@@ -6,12 +6,18 @@
     "production": {
       "android": {
         "buildType": "app-bundle"
+      },
+      "ios": {
+        "credentialsSource": "remote"
       }
     },
     "staging": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "ios": {
+        "credentialsSource": "remote"
       }
     }
   },
