--- a/packages/mobile-store/app.json
+++ b/packages/mobile-store/app.json
@@ -17,7 +17,10 @@
       "package": "com.chroma.mobilestore"
     },
     "ios": {
-      "bundleIdentifier": "com.chroma.mobilestore"
+      "bundleIdentifier": "com.chroma.mobilestore",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "plugins": [
       "expo-asset",
