--- a/packages/mobile-store/app.json
+++ b/packages/mobile-store/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Chroma Mobile Store",
     "slug": "chroma-mobile-store",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "orientation": "portrait",
     "platforms": [
       "ios",
@@ -18,6 +18,7 @@
     },
     "ios": {
       "bundleIdentifier": "com.chroma.mobilestore",
+      "buildNumber": "2",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
