feat: mobile screens adjustments

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:api": "pnpm --filter @chroma/api dev",
     "dev:admin": "pnpm --filter @chroma/admin dev",
     "dev:front-store": "pnpm --filter @chroma/front-store dev",
+    "dev:mobile-front-v2": "pnpm --filter @chroma/mobile-front-v2 dev",
     "build": "pnpm --recursive build",
     "lint": "pnpm --recursive lint"
   },
