--- a/packages/mobile-front-v2/package.json
+++ b/packages/mobile-front-v2/package.json
@@ -23,6 +23,12 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/routers": "^6.1.9",
+    "@tamagui/animations-react-native": "^1.143.1",
+    "@tamagui/babel-plugin": "^1.143.1",
+    "@tamagui/config": "^1.143.1",
+    "@tamagui/core": "^1.143.1",
+    "@tamagui/lucide-icons": "^1.143.1",
+    "@tamagui/metro-plugin": "^1.143.1",
     "@tanstack/query-core": "^5.90.12",
     "@tanstack/react-query": "^5.90.12",
     "@ungap/structured-clone": "^1.3.0",
@@ -32,7 +38,6 @@
     "ansi-styles": "^5.2.0",
     "base64-js": "^1.5.1",
     "buffer": "^6.0.3",
-    "clsx": "^2.1.1",
     "color": "^4.2.3",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
@@ -59,18 +64,17 @@
     "memoize-one": "^6.0.0",
     "metro-runtime": "^0.83.3",
     "nanoid": "^5.1.6",
-    "nativewind": "^4.0.0",
     "nullthrows": "^1.1.1",
     "pretty-format": "^29.7.0",
     "promise": "^8.3.0",
     "punycode": "^2.3.1",
     "query-string": "^7.1.3",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-devtools-core": "^6.1.5",
     "react-freeze": "^1.0.4",
     "react-is": "^18.3.1",
     "react-native": "0.81.5",
-    "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-is-edge-to-edge": "^1.2.1",
     "react-native-reanimated": "~4.1.6",
@@ -88,7 +92,7 @@
     "split-on-first": "^1.1.0",
     "stacktrace-parser": "^0.1.11",
     "strict-uri-encode": "^2.0.0",
-    "tailwind-merge": "^2.6.0",
+    "tamagui": "^1.143.1",
     "use-latest-callback": "^0.2.6",
     "warn-once": "^0.1.1",
     "webidl-conversions": "^5.0.0",
@@ -98,7 +102,6 @@
   "devDependencies": {
     "@types/react": "^18.3.23",
     "@types/react-native": "^0.73.0",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
 }
